0.2.1 / Fixed footer display on mobile, and centering of the header logo.

--- a/styles/general.css
+++ b/styles/general.css
@@ -154,7 +154,7 @@ header a {
   width: 100%;
   height: 100%;
   display: inline-flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   text-shadow: 0px 0px 1px #1b392b;
 
@@ -174,8 +174,8 @@ header #navlogo {
   width: 800px;
   display: flex;
   align-items: center;
-  justify-content: center;
   transition: width 0.1s ease-in-out;
+
 }
 
 header #navlogo img {
@@ -361,7 +361,7 @@ footer.large div#ScrollDownArrow {
   cursor: pointer;
 }
 
-.social-link:hover .icon{
+.social-link:hover .icon {
   transform: scale(1.1);
 }
 
@@ -403,7 +403,7 @@ footer.large div#ScrollDownArrow {
     font-size: 12px;
   }
 
-  footer .miniFooter {
+  footer {
     font-size: 12px;
   }
 
@@ -414,6 +414,16 @@ footer.large div#ScrollDownArrow {
   header.large {
     height: 6rem;
   }
+
+  #socials {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
 
   .clock-hand {
     width: 70%;
